Not setting a pointer to 0 after deletion is asking for trouble. Fix crash in CSS editor.

BUG: 131849